src/objects/QB_Bill_Header_Details_Extract__c.object
<CustomObject>
    <description>Payable Invoice  - header &amp; line Data Extracted provided by Astrum Solar for the purposes of cash matching</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF_Dimension_1__c</fullName>
        <label>FF Dimension 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FF_Dimension_2__c</fullName>
        <label>FF Dimension 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ir2_Value__c</fullName>
        <formula>BLANKVALUE(Temp_Expense_Line_Amount__c,Temp_Item_Line_Cost__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ir2 Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>Memo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QB_Invoice_Header__c</fullName>
        <label>QB Invoice Header</label>
        <referenceTo>QB_Pay_Invoice_Header__c</referenceTo>
        <relationshipLabel>QB Bill Header Details Extract</relationshipLabel>
        <relationshipName>QB_Bill_Header_Details_Extract</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RS_Project_ID__c</fullName>
        <label>RS Project ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Bill_DueDate__c</fullName>
        <label>Temp_Bill_DueDate</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Bill_OpenAmount__c</fullName>
        <label>Temp_Bill_OpenAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temp_Bill_RefNumber__c</fullName>
        <label>Temp_Bill_RefNumber</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Bill_TxnDate__c</fullName>
        <label>Temp_Bill_TxnDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Temp_Bill_TxnID__c</fullName>
        <label>Temp_Bill_TxnID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Expense_Line_Account__c</fullName>
        <label>Temp_Expense_Line_Account</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Expense_Line_Amount__c</fullName>
        <label>Temp_Expense_Line_Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temp_Expense_Line_BillableStatus__c</fullName>
        <label>Temp_Expense_Line_BillableStatus</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Expense_Line_Class__c</fullName>
        <label>Temp_Expense_Line_Class</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Expense_Line_Customer__c</fullName>
        <label>Temp_Expense_Line_Customer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Expense_Line_Memo__c</fullName>
        <label>Temp_Expense_Line_Memo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Temp_Item_Line_Billable_Status__c</fullName>
        <label>Temp_Item_Line_Billable_Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Item_Line_Class__c</fullName>
        <label>Temp_Item_Line_Class</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Item_Line_Cost__c</fullName>
        <label>Temp_Item_Line_Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temp_Item_Line_Customer__c</fullName>
        <label>Temp_Item_Line_Customer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Item_Line_Description__c</fullName>
        <label>Temp_Item_Line_Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Temp_Item_Line_Item__c</fullName>
        <label>Temp_Item_Line_Item</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Item_Line_Quantity__c</fullName>
        <label>Temp_Item_Line_Quantity</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Terms__c</fullName>
        <label>Terms</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>QB Bill Header Details Extract</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Temp_Expense_Line_Account__c</columns>
        <columns>Account__c</columns>
        <columns>Amount__c</columns>
        <columns>Temp_Bill_TxnDate__c</columns>
        <columns>Temp_Expense_Line_Amount__c</columns>
        <columns>Temp_Bill_RefNumber__c</columns>
        <columns>Temp_Item_Line_Cost__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BD-{0000000000}</displayFormat>
        <label>QB Bill Header Details Extract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QB Bill Header Details Extract</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>